# wael-django-bld.ai

./: README.md  db.sqlite3  pyproject.toml  test.txt
config/: settings.py  urls.py
parents/: middleware.py  models.py  permision.py  serializers.py  urls.py  views.py
parents/migrations/: 0001_initial.py  0002_remove_parents_named.py
server/: settings.py  urls.py
students/: forms.py  models.py  serializers.py  urls.py  views.py
students/migrations/: 0001_initial.py  0002_alter_students_firstname_alter_students_lastname.py  0002_alter_students_subjects.py  0002_students_subject.py  0002_students_subjects.py  0003_alter_students_firstname_alter_students_lastname_and_more.py  0003_alter_students_options_and_more.py  0003_remove_students_subject_students_subjects.py  0004_remove_students_subjects_students_subjects.py  0004_students_mark.py
subjects/: models.py  serializers.py  urls.py  views.py
subjects/migrations/: 0001_initial.py  0002_remove_subjects_namse.py
users/: models.py  serializers.py  urls.py  users.json  views.py
users/migrations/: 0001_initial.py  0002_remove_users_ass.py  0003_tokens.py
